--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title class="center">Wade Flash</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="contato.html">Contato</a>
-        </li>
-
+  <body class="fundo">
+    <ul id="menu">
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="contato.html">Contato</a>
+      </li>
     </ul>
-    <h1>The Flash</h1>
 
-    <p>Tudo sobre o maior armador da história da NBA</p>
-    <img src="assets/images/wade.jpg" alt="Fot do Wade">
-
-    <h2>Um breve vídeo das magias que eu faço em quadra</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/pjkRwRmWpH8" 
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen></iframe>
-    </body>
+    <div class="container">
+      <div class="texto1">
+        <h1 class="h1">WADE FLASH</h1>
+        <p class="center">
+          "Aqui você encontra tudo sobre o maior armador da historia da NBA"
+        </p>
+      </div>
+      <div>
+        <img
+          class="imagem"
+          src="assets/images/2017-18 Miami HEAT Vice Uniform Collection.png"
+          alt="Foto wade"
+        />
+      </div>
+    </div>
+    <div class="container">
+      <a href="https://www.linkedin.com/in/kauan-manoel-4142791b8/">
+        <img
+          class="tm-social"
+          src="assets/images/linkedin.png"
+          alt="icon linkedin"
+        />
+      </a>
+      <a href="https://github.com/KauanManoel">
+        <img
+          class="tm-social"
+          src="assets/images/github (3).png"
+          alt="icon github"
+        />
+      </a>
+      <a href="https://www.instagram.com/kauanwade9/">
+        <img
+          class="tm-social"
+          src="assets/images/instagram.png"
+          alt="icon instagram"
+        />
+      </a>
+    </div>
+    <hr />
+    <footer class="centerfooter">
+      Todos os direitos reservados: Kauan Wade &copy
+    </footer>
+   
+  </body>
 </html>
