Introdução da estilização CSS na marcação HTML

--- a/contato.html
+++ b/contato.html
@@ -1,86 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body class="fundo">
-    <ul id="menu">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="contato.html">Contato</a>
-      </li>
-    </ul>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Contato</title>
+      <link rel="stylesheet" href="assets/css/style.css" />
+    </head>
+    <body class="fundo">
+      <ul id="menu">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="contato.html">Contato</a>
+        </li>
+      </ul>
 
-    <h1 class="h1c">Entre em contato conosco</h1>
+      <h1 class="h1c">Entre em contato conosco</h1>
+      <h3 class= "Contact">Contact / Location</h3>
+      <div class="containerC">
+        <form action="">
+          <label class="corC" for="Nome"> Nome: </label>
+          <input type="text" id="Nome" />
 
-    <div class="containerC">
-      <form action="">
-        <label class="corC" for="Nome"> Nome: </label>
-        <input type="text" id="Nome" />
+          <br />
+          <br />
 
-        <br />
-        <br />
+          <label class="corC" for="E-mail"> E-mail: </label>
+          <input type="email" id="Email" />
 
-        <label class="corC" for="E-mail"> E-mail: </label>
-        <input type="email" id="Email" />
+          <br />
+          <br />
 
-        <br />
-        <br />
+          <label class="corC" for="Assunto"> Assunto: </label>
+          <textarea name="Assunto" id="Assunto" cols="21" rows="2"></textarea>
 
-        <label class="corC" for="Assunto"> Assunto: </label>
-        <textarea name="Assunto" id="" cols="20" rows="4"></textarea>
+          <br />
+          <br />
 
-        <br />
-        <br />
-
-        <button>Enviar</button>
-      </form>
-
-      <div class="ml-right">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d52472524.63284505!2d-8.2006531!3d-36.6102865!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0a20ec8c111%3A0xff96f271ddad4f65!2zTWlhbWksIEZsw7NyaWRhLCBFVUE!5e0!3m2!1spt-BR!2sbr!4v1603296251049!5m2!1spt-BR!2sbr"
-          width="350"
-          height="250"
-          frameborder="200"
-          style="border: 0"
-          allowfullscreen=""
-          aria-hidden="false"
-          tabindex="0"
-          class="ml-right"
-        ></iframe>
+          <button class = "ml-button">Enviar</button>
+        </form>
+        <div class="ml-right">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d52472524.63284505!2d-8.2006531!3d-36.6102865!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0a20ec8c111%3A0xff96f271ddad4f65!2zTWlhbWksIEZsw7NyaWRhLCBFVUE!5e0!3m2!1spt-BR!2sbr!4v1603296251049!5m2!1spt-BR!2sbr"
+            width="350"
+            height="250"
+            frameborder="200"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+            class="ml-right"
+          ></iframe>
+        </div>
       </div>
-    </div>
-    <div class="container">
-      <a href="https://www.linkedin.com/in/kauan-manoel-4142791b8/">
-        <img
-          class="tm-social"
-          src="assets/images/linkedin.png"
-          alt="icon linkedin"
-        />
-      </a>
-      <a href="https://github.com/KauanManoel">
-        <img
-          class="tm-social"
-          src="assets/images/github (3).png"
-          alt="icon github"
-        />
-      </a>
-      <a href="https://www.instagram.com/kauanwade9/">
-        <img
-          class="tm-social"
-          src="assets/images/instagram.png"
-          alt="icon instagram"
-        />
-      </a>
-    </div>
-    <hr />
-    <footer class="centerfooter">
-      Todos os direitos reservados: Kauan Wade &copy
-    </footer>
-  </body>
-</html>
+      
+      </div>
+      <div class="container">
+        <a href="https://www.linkedin.com/in/kauan-manoel-4142791b8/">
+          <img
+            class="tm-social"
+            src="assets/images/linkedin.png"
+            alt="icon linkedin"
+          />
+        </a>
+        <a href="https://github.com/KauanManoel">
+          <img
+            class="tm-social"
+            src="assets/images/github (3).png"
+            alt="icon github"
+          />
+        </a>
+        <a href="https://www.instagram.com/kauanwade9/">
+          <img
+            class="tm-social"
+            src="assets/images/instagram.png"
+            alt="icon instagram"
+          />
+        </a>
+      </div>
+      <hr />
+      <footer class="centerfooter">
+        Todos os direitos reservados: Kauan Wade &copy
+      </footer>
+    </body>
+  </html>
