--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
     <footer class="centerfooter">
       Todos os direitos reservados: Kauan Wade &copy
     </footer>
+
+    <script src= "assets/js/script.js"></script>
   </body>
 </html>
